--- a/seandouganwebsite/seandouganwebsite.csproj
+++ b/seandouganwebsite/seandouganwebsite.csproj
@@ -34,6 +34,7 @@
         <PackageReference Include="NUnit.Runners" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0-alpha.4" />
         <PackageReference Include="Serilog" Version="3.0.0-dev-01998" />
+        <PackageReference Include="SimpleMvcSitemap" Version="4.0.1" />
     </ItemGroup>
 
     <ItemGroup>
